<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="7dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivListImage"
            android:layout_width="100dp"
            android:layout_height="110dp" />

        <TextView
            android:id="@+id/tvListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/ivListImage"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_list_title"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvListDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvListTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/ivListImage"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/item_list_description" />

        <TextView
            android:id="@+id/tvListCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/ivListImage"
            android:layout_below="@+id/tvListDescription"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="italic"
            android:text="@string/item_list_country"
            android:textAlignment="viewEnd"
            android:layout_marginTop="10dp"
            android:textSize="12dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>