<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeaderDetailActivity">

        <ImageView
            android:id="@+id/ivDetailImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo" />

        <LinearLayout
            android:id="@+id/llHead"
            style="@style/Detail"
            android:layout_below="@+id/ivDetailImage"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDetailTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_list_title"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivDetailImg"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_share"
                android:tint="@color/button_default" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBody"
            style="@style/Detail"
            android:layout_below="@+id/llHead"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetailCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/detail_list_country"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_list_description" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>